--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -118,7 +118,8 @@ x-view {
 
 @font-face {
     font-family: 'iconfont';
-    src:url('http://at.alicdn.com/t/font_1412137972_0042686.woff') format('woff');
+    /*src:url('../fonts/font.woff') format('woff');*/
+    src: url('http://at.alicdn.com/t/font_1412220634_1648517.woff') format('woff');
 }
 
 body /deep/ .iconfont{
@@ -137,4 +138,3 @@ body /deep/  ::-webkit-scrollbar-thumb {
     background: rgba(100,100,100,0.8);
     border-radius: 4px;
 }
-
