--- a/components/panel-about/index.html
+++ b/components/panel-about/index.html
@@ -43,17 +43,22 @@
             }
 
             .update i {
+                display: inline-block;
+                height: 25px;
+                width: 25px;
                 font-style: normal;
-                font-size: 14px;
+                font-size: 16px;
+                vertical-align: 0;
+                margin-right: -3px;
             }
 
-            @-webkit-keyframes  loading {
+            @-webkit-keyframes  rotate {
                 from {-webkit-transform: rotate(0deg);}
                 to {-webkit-transform: rotate(360deg);}
             }
 
             .update.checking i {
-                -webkit-animation:loading 2s infinite linear ;
+                -webkit-animation: rotate 2s infinite linear ;
             }
 
             .update:hover {
