--- a/components/song-info/index.html
+++ b/components/song-info/index.html
@@ -30,7 +30,8 @@
             h4 {
                 position: absolute;
                 top: 0;
-                margin: 4vh 12vw 0 10vw;
+                margin: 4vh 12vw 0 12vw;
+                width: 26vw;
                 line-height: 1.8;
                 font-size: 1.5vw;
             }
