--- a/components/song-player/index.html
+++ b/components/song-player/index.html
@@ -187,7 +187,7 @@
 
         //格式化时间
         formatTime : function(n) {
-            var m = Math.ceil(n/60)
+            var m = Math.floor(n/60)
             var s = Math.ceil(n%60)
             m = m < 10 ? '0' + m : m
             s = s < 10 ? '0' + s : s
