改善歌词样式

--- a/components/song-lyric/index.html
+++ b/components/song-lyric/index.html
@@ -25,16 +25,17 @@
                margin: 0;
                padding: 0 3vw;
                width: 44vw;
-               line-height: 1;
+               line-height: 1.1;
                font-size: 13px;
                text-align: center;
+               word-spacing: 0.1em;
                opacity: 0;
                transition: all 0.5s ease-in;
            }
 
            p.no-lrc {
                opacity: 0.5;
-               top: 45vh;
+               top: 47vh;
            }
 
            p.prev {
@@ -44,12 +45,12 @@
 
            p.current {
                font-size: 15px;
-               top: 45vh;
+               top: 47vh;
                opacity: 1;
            }
 
            p.next {
-               top: 55vh;
+               top: 59vh;
                opacity: 0.6;
            }
 
