format css order

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,14 +1,14 @@
 html, body {
+    height: 100%;
     margin: 0;
     padding: 0;
-    height: 100%;
     overflow: hidden;
 }
 
 ul, li {
-    list-style: none;
     margin: 0;
     padding: 0;
+    list-style: none;
 }
 
 body {
@@ -17,35 +17,33 @@ body {
 }
 
 #wrapper {
-    height: 100%;
     position: relative;
+    height: 100%;
     width: 100%;
 }
 
 .sidebar {
-    bottom: 0;
-    display: block;
-    left: 0;
     position: absolute;
+    left: 0;
     right: 50%;
     top: 0;
+    bottom: 0;
 }
 
 .sidebar .nav {
+    display: block;
+    width: 10vw;
+    height: 80vh;
+    padding: 10vh 0;
     background: rgba(200, 200, 200, 0.5);
     box-shadow: 1px 1px 2px rbga(0,0,0,0.1);
-    display: block;
-    height: 80vh;
-    padding-bottom: 10vh;
-    padding-top: 10vh;
-    width: 10vw;
 }
 
 .sidebar .nav li {
-    cursor: pointer;
     height: 16vh;
     line-height: 16vh;
     text-align: center;
+    cursor: pointer;
     transition: font-size 0.3s ease-in;
 }
 
@@ -54,56 +52,55 @@ body {
 }
 
 .sidebar .content {
-    bottom: 0;
-    left: 10vw;
     position: absolute;
+    left: 10vw;
     right: 0;
     top: 0;
+    bottom: 0;
 }
 
 .sidebar .content > * {
-    bottom: 0;
-    display: block;
-    left: 0;
-    opacity: 0;
     position: absolute;
+    z-index: 1;
+    left: 0;
     right: 0;
     top: 0;
-    z-index: 1;
+    bottom: 0;
+    opacity: 0;
     -webkit-transform: scale(0.95);
 }
 
 .sidebar .content > *.active {
+    z-index: 2;
     opacity: 1;
     transition: all 0.3s ease-in;
     -webkit-transform: scale(1);
-    z-index: 2;
 }
 
 main {
-    bottom: 0;
-    left: 50%;
     position: absolute;
+    left: 50%;
     right: 0;
     top: 0;
+    bottom: 0;
 }
 
 main song-player {
-    bottom: 10vh;
-    left: 0;
     position: absolute;
+    left: 0;
     right: 0;
+    bottom: 10vh;
     text-align: center;
 }
 
 song-face {
-    bottom: 0;
-    left: 0;
     position: absolute;
-    top: 0;
-    transition: left 0.4s ease-in;
-    width: 50%;
     z-index: 10;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 50%;
+    transition: left 0.4s ease-in;
 }
 
 song-face.hover {
@@ -128,13 +125,13 @@ body /deep/ .iconfont{
 }
 
 body /deep/ ::-webkit-scrollbar {
+    width: 2px;
     opacity: 0.5;
     background: rgba(255,255,255,0.5);
-    width: 2px;
     border-radius: 4px;
 }
 
 body /deep/  ::-webkit-scrollbar-thumb {
-    background: rgba(100,100,100,0.8);
     border-radius: 4px;
+    background: rgba(100,100,100,0.8);
 }
