--- a/components/x-view/index.html
+++ b/components/x-view/index.html
@@ -37,6 +37,15 @@
                 FM.obs.on('KEY:SHOW_WINDOW', function(){
                     self.isMin ? self.restore() : self.min()
                 })
+
+                self.addTray()
+                FM.obs.on('SONG:UPDATE', function(song) {
+                    self.updateTray(song)
+                })
+
+                FM.obs.on('SONG:STAR', function(song) {
+                    self.updateTray(song)
+                })
             },
 
             //最小化
@@ -75,7 +84,7 @@
                 var self = this
                 self.tray && self.tray.remove()
                 var gui = self.gui
-                var icon = self.getIcon()
+                var icon = self.getIcon(FM.status.song)
                 var tray = new gui.Tray({
                     title : '',
                     icon : icon.icon,
@@ -95,9 +104,14 @@
                 self.tray = tray
             },
 
+            updateTray : function(song) {
+                var self = this
+                self.tray.icon = self.getIcon(song).icon
+            },
+
             //获取任务栏图标
-            getIcon : function() {
-                if(FM.status.song.like) {
+            getIcon : function(song) {
+                if(song.like) {
                     return {
                         icon : './assets/images/red_tray.png',
                         alticon: './assets/images/red_tray@2x.png'
@@ -108,7 +122,7 @@
                         alticon: './assets/images/blank_tray@2x.png'
                     }
                 }
-            },
+            }
         })
     </script>
 </polymer-element>
