--- a/components/panel-search/index.html
+++ b/components/panel-search/index.html
@@ -17,6 +17,7 @@
                 display: block;
                 width: 37vw;
                 height: 10vh;
+                margin-bottom: 2vh;
                 padding: 0 10px;
                 border:1px solid rgba(100,100,100,0.1);
                 background: rgba(255,255,255,0.4);
