增加听相似歌曲和播放列表

--- a/components/panel-setting/index.html
+++ b/components/panel-setting/index.html
@@ -110,6 +110,14 @@
                         <input name="NEXT" placeholder="无" on-keydown="{{recordKey}}" on-blur="{{setKey}}" value="{{config.hotKey.NEXT}}" />
                     </p>
                     <p>
+                        <label>收听相似歌曲</label>
+                        <input name="PLAY_SIMILAR" placeholder="无" on-keydown="{{recordKey}}" on-blur="{{setKey}}" value="{{config.hotKey.PLAY_SIMILAR}}" />
+                    </p>
+                    <p>
+                        <label>打开播放列表</label>
+                        <input name="PLAYLIST_SHOW" placeholder="无" on-keydown="{{recordKey}}" on-blur="{{setKey}}" value="{{config.hotKey.PLAYLIST_SHOW}}" />
+                    </p>
+                    <p>
                         <label>打开控制台</label>
                         <input name="SHOW_DEV_TOOLS" placeholder="无" on-keydown="{{recordKey}}" on-blur="{{setKey}}" value="{{config.hotKey.SHOW_DEV_TOOLS}}" />
                     </p>
