--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -116,7 +116,7 @@ x-view {
 @font-face {
     font-family: 'iconfont';
     /*src:url('../fonts/font.woff') format('woff');*/
-    src: url('http://at.alicdn.com/t/font_1412220634_1648517.woff') format('woff');
+    src: url('http://at.alicdn.com/t/font_1412429828_9014864.woff') format('woff')
 }
 
 body /deep/ .iconfont{
