--- a/components/song-lyric/index.html
+++ b/components/song-lyric/index.html
@@ -9,14 +9,17 @@
                height: 100%;
                text-shadow: 1px 1px 5px #000;
                text-align: center;
-               letter-spaceing: 1px;
+               letter-spacing: 1px;
                color: #fff;
+               opacity: 0;
                background: rgba(0,0,0,0);
+               transition: all 0.5s ease-in;
+               pointer-events:none;
            }
 
-           .has-lyric {
+           .show {
+               opacity: 1;
                background: rgba(0,0,0,0.4);
-               transition: background 0.5s ease-in;
            }
 
            p {
@@ -59,7 +62,7 @@
            }
 
        </style>
-        <div class="{{lrc.length > 0 ? 'has-lyric' : ''}}">
+        <div class="{{isShow ? 'show' : ''}}">
             <template if="{{!lrc.length}}">
                 <p class="no-lrc">暂无歌词</p>
             </template>
@@ -76,13 +79,13 @@
             lrc : [],
             ready : function() {
                 var self = this
-                self.hidden = !FM.config.lyric
+                self.isShow = FM.config.lyric
 
                 //歌曲更新后，更换歌词
                 FM.obs.on('SONG:UPDATE', function(song) {
                     self.lrc = []
                     self.song = song
-                    if(self.hidden) return
+                    if(!self.isShow) return
                     process.nextTick(function() {
                         self.fetchLrc(song)
                     })
@@ -114,7 +117,7 @@
 
                 //歌词滚动
                 FM.obs.on('TIME:UPDATE', function(playTime) {
-                    if(self.lrc.length && !self.hidden) {
+                    if(self.lrc.length && self.isShow) {
                         var lines = self.lrc
                         for(i = 0; i<lines.length; i++) {
                             if(playTime < lines[i].time) {
@@ -138,8 +141,8 @@
             //切换歌词显示
             toggleLyric : function() {
                 var self = this
-                self.hidden = !FM.config.lyric
-                if(!self.hidden && !self.lrc.length) {
+                self.isShow = FM.config.lyric
+                if(self.isShow && !self.lrc.length) {
                     self.fetchLrc(self.song)
                 }
                 FM.cache.set('CACHE:CONFIG', FM.config)
