--- a/components/song-player/index.html
+++ b/components/song-player/index.html
@@ -256,6 +256,7 @@
             var self = this
             var sid = self.song.sid
             var cid = parseInt(sid)+2000000
+            var name = self.song.title
             if(self.similaring) return
             self.similaring = true
             FM.appSDK.songs({
@@ -264,6 +265,8 @@
             }, function(err, songs) {
                 if(err) return console.error(err)
                 FM.playlist.reset(songs)
+                FM.status.channel = {id: cid, name : name}
+                FM.obs.emit('CHANNEL:UPDATE', FM.status.channel)
             })
         },
 
