--- a/components/x-mask/index.html
+++ b/components/x-mask/index.html
@@ -1,21 +1,6 @@
 <polymer-element name="x-mask">
     <template>
-        <style>
-            :host {
-                position: absolute;
-                z-index: 1000;
-                left: 0;
-                top: 0;
-                right: 0;
-                bottom: 0;
-                line-height: 100vh;
-                text-align: center;
-                background: #fff;
-                transition: opacity 1s ease-in;
-                pointer-events:none;
-            }
-        </style>
-        <img src="../../assets/images/mask-loading.gif" width="80" />
+        <content select="*"></content>
     </template>
     <script>
         Polymer('x-mask',{
